# mpris-scrobbler

./: .build.yml  .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  meson.build  meson_options.txt
.builds/: alpine.yml  archlinux.yml  debian.yml  push.yml
doc/: mpris-scrobbler-config.5.scd  mpris-scrobbler-credentials.5.scd  mpris-scrobbler-signon.1.scd  mpris-scrobbler.1.scd
src/: api.h  audioscrobbler_api.h  configuration.h  credentials_lastfm.h.in  credentials_librefm.h.in  credentials_listenbrainz.h.in  curl.h  daemon.c  ini.h  ini.rl  ini_base.h  listenbrainz_api.h  main.c  md5.h  scrobble.h  scrobbler.h  scurl.h  sdbus.h  sevents.h  signon.c  slastfm.h  smpris.h  sstrings.h  stb_ds.h  stretchy_buffer.h  structs.h  structs.h.orig  utils.h  version.c.in  version.h.in  xml.h
tests/: ini_reader_test.c  meson.build  stdb_ds_test.c  stretchy_buffers_test.c  string_array_test.c  strings_basic.c
tests/mocks/: credentials.ini  simple.ini
units/: mpris-scrobbler.service  mpris-scrobbler.service.in  systemd-user.service.in
utils/: current-playing.sh  get-players.sh  get-status.sh  monitor.sh
